--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^5.0.0-alpha.28",
+    "@material-ui/icons": "^5.0.0-alpha.28",
+    "@material-ui/styles": "^4.10.0",
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
+    "react-helmet": "^6.1.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
+    "yup": "^0.29.3",
+    "react-feather": "^2.0.8",
     "prop-types": "latest"
   },
   "scripts": {
